--- a/manifest.json
+++ b/manifest.json
@@ -3,18 +3,18 @@
  "description": "Avenida Europa, 110 - Jardim Europa, São Paulo",
  "name": "Seres - Tour Virtual 360°",
  "display": "fullscreen",
- "background_color": "#FF6600",
- "theme_color": "#FF6600",
+ "background_color": "#FFFFFF",
+ "theme_color": "#FFFFFF",
  "icons": [
   {
    "type": "image/png",
-   "src": "misc/icon512.png",
-   "sizes": "512x512"
+   "src": "misc/icon150.png",
+   "sizes": "150x150"
   },
   {
    "type": "image/png",
-   "src": "misc/icon192.png",
-   "sizes": "192x192"
+   "src": "misc/icon16.png",
+   "sizes": "16x16"
   },
   {
    "type": "image/png",
@@ -23,13 +23,8 @@
   },
   {
    "type": "image/png",
-   "src": "misc/icon150.png",
-   "sizes": "150x150"
-  },
-  {
-   "type": "image/png",
-   "src": "misc/icon64.png",
-   "sizes": "64x64"
+   "src": "misc/icon192.png",
+   "sizes": "192x192"
   },
   {
    "type": "image/png",
@@ -38,8 +33,13 @@
   },
   {
    "type": "image/png",
-   "src": "misc/icon16.png",
-   "sizes": "16x16"
+   "src": "misc/icon512.png",
+   "sizes": "512x512"
+  },
+  {
+   "type": "image/png",
+   "src": "misc/icon64.png",
+   "sizes": "64x64"
   }
  ]
 }
